--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             </div>
             <div class="composotion__inner-img">
               <img
-                src="./img/design_colors_silver_side__ff3nerq51ka6_xlarge_2x 1.jpg"
+                src="img/design_colors_silver_side__ff3nerq51ka6_xlarge_2x 1.jpg"
                 alt=""
                 class="content-item color--blue content-item--active"
               />
