--- a/index.html
+++ b/index.html
@@ -124,11 +124,11 @@
             </div>
             <div class="composotion__inner-img">
               <img
-                src="img/design_colors_silver_side__ff3nerq51ka6_xlarge_2x 1.jpg"
+                src="./img/design_colors_silver_side__ff3nerq51ka6_xlarge_2x 1.jpg"
                 alt=""
                 class="content-item color--blue content-item--active"
               />
-              <img class="content-item color--red"src="./img/design_colors_silver_side__ff3nerq51ka6_xlarge_2x 1 (1).jpg" alt="">
+              <img class="content-item color--red" src="./img/design_colors_silver_side__ff3nerq51ka6_xlarge_2x 1 (1).jpg" alt="">
               <img class="content-item color--black" src="./img/design_colors_silver_side__ff3nerq51ka6_xlarge_2x 1 (2).jpg" alt="">
               <img class="content-item color--green" src="./img/design_colors_silver_side__ff3nerq51ka6_xlarge_2x 1 (3).jpg" alt="">
               <img  class="content-item color--white" src="./img/design_colors_silver_side__ff3nerq51ka6_xlarge_2x 1 (4).jpg" alt="">
@@ -149,10 +149,10 @@
             alt=""
             class="content-item color--blue content-item--active"
           />
-          <img src="./img/airpods-max-smartcase-silver-witb 1 (1).jpg" alt="" class="content-item color--red">
-          <img src="./img/airpods-max-smartcase-silver-witb 1 (2).jpg" alt="" class="content-item color--black">
-          <img src="./img/airpods-max-smartcase-silver-witb 1 (3).jpg" alt="" class="content-item color--green">
-          <img src="./img/airpods-max-smartcase-silver-witb 1 (4).jpg" alt="" class="content-item color--white">
+          <img src="./img/airpods-max-smartcase-silver-witb 1 (1).jpg" alt="" class="content-item color--red"/>
+          <img src="./img/airpods-max-smartcase-silver-witb 1 (2).jpg" alt="" class="content-item color--black"/>
+          <img src="./img/airpods-max-smartcase-silver-witb 1 (3).jpg" alt="" class="content-item color--green"/>
+          <img src="./img/airpods-max-smartcase-silver-witb 1 (4).jpg" alt="" class="content-item color--white"/>
           <h2 class="case--energy">Stayin' alive, stayin' alive.</h2>
           <p class="energy--num">20</p>
           <p class="energy--text">
